Changes in Version 0.0.5

  o The color palette for plots of trackeRdataZones objects is now also based
    on black/blue.


Changes in Version 0.0.4

  o The sanity checks performed when creating a trackeRdata object now
    throw warnings. This can be switched off with the argument silent = TRUE.

  o The color palette for plots of trackeRdataSummary and trackeRdataZones
    objects changed slightly.


Changes in Version 0.0.3

  o plotRoute() can now include more than one session in one plot. The new
    function leafletRoute() uses the leaflet package to produce an
    interactive map.

  o Added a method for distribution and concentration profiles to fit a
    functional principal components analysis and a plot function to
    accompany it.

  o Added a second, shorter vignette "Tour de trackeR" to illustrate basic
    features and new functionality.

  o Added a new timeline plot for trackeRdata object to visualise the date
    time of the sessions.

  o Added a new nsessions method to access the number of sessions in
    various trackeR objects.

  o Updated "runs" data object by splitting former session 20 into 2 sessions
    as the two parts of the session took place in two different place with
    a break of over 1.5 hours between them.


Changes in Version 0.0.2

  o The scale options has been removed from the distribution profile and is
    now set-up as a separate operation. In this implementation first smoothing
    and then scaling (the right order for those operations) is possible.

  o Some improvements for trackeRdata(): session containing no information
    beyond the timestamps are removed; conversions between distance and
    speed now recognise the respective units.

  o Distribution profile: if all values of the variable for which the profile
    is to be calculated are missing, the profile (and its smoothed version)
    will also consist of only NA (rather than throwing an error).
