@@ -84,10 +84,10 @@ plot(runs, session = 27, what = c("altitude", "pace"))
 ```
 
 The route taken during a training session can also be plotted on maps from various sources
-e.g., from OpenStreetMap. This can be done either on a static map
+e.g., from Google or OpenStreetMap. This can be done either on a static map
 
-```{r, plotRoute, message = FALSE, fig.width = 6, fig.height = 6}
-plotRoute(runs, session = 4, zoom = 13, source = "osm")
+```{r, plotRoute, message = FALSE, warning = FALSE, fig.width = 6, fig.height = 6}
+plotRoute(runs, session = 4, zoom = 13, source = "google")
 ```
 
 or on an interactive map.
